src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Former_Customer_Type__c</fullName>
        <label>Former Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HW Cancellation</fullName>
                </value>
                <value>
                    <fullName>MS Cancellation</fullName>
                </value>
                <value>
                    <fullName>Both MS &amp; HW Cancellation</fullName>
                </value>
                <value>
                    <fullName>Trial Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Account_Name__c</fullName>
        <formula>Name  &amp; &apos; = &apos; &amp;  Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Invoices_Formula__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;QueryId=[Invoices]a203B000000VcO4?pv0=&quot;+Id+
&quot;&amp;TemplateId=a0I80000000laT3&quot; +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;AC1=Invoice+for+&quot; + Name + 
&quot;&amp;QMode=SendEmail&quot;+
&quot;&amp;EmailAdditionalTo=Test@gmail.com&quot;+
&quot;&amp;EmailSubject=Account Invoices&quot;+
&quot;&amp;CongaEmailTemplateId=a1z3B000000JFJr&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Invoices Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Type__c</fullName>
        <label>Global Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer - Amplify</fullName>
                </value>
                <value>
                    <fullName>Customer - Customer</fullName>
                </value>
                <value>
                    <fullName>Customer - Marketing</fullName>
                </value>
                <value>
                    <fullName>Customer - Media</fullName>
                </value>
                <value>
                    <fullName>Customer - Metrostudy</fullName>
                </value>
                <value>
                    <fullName>Customer - REE</fullName>
                </value>
                <value>
                    <fullName>Prospect - Amplify</fullName>
                </value>
                <value>
                    <fullName>Prospect - Marketing</fullName>
                </value>
                <value>
                    <fullName>Prospect - Media</fullName>
                </value>
                <value>
                    <fullName>Prospect - Metrostudy</fullName>
                </value>
                <value>
                    <fullName>Prospect - REE</fullName>
                </value>
                <value>
                    <fullName>Competitor - Amplify</fullName>
                </value>
                <value>
                    <fullName>Competitor - Marketing</fullName>
                </value>
                <value>
                    <fullName>Competitor - Media</fullName>
                </value>
                <value>
                    <fullName>Competitor - Metrostudy</fullName>
                </value>
                <value>
                    <fullName>Competitor - REE</fullName>
                </value>
                <value>
                    <fullName>Former Customer - Metrostudy</fullName>
                </value>
                <value>
                    <fullName>Customer - Events</fullName>
                </value>
                <value>
                    <fullName>Prospect - Events</fullName>
                </value>
                <value>
                    <fullName>Former Customer - REE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Product_Type__c</fullName>
        <inlineHelpText>Brand and Product Type that account has purchased.</inlineHelpText>
        <label>Global Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing Finance - Digital</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing Finance - Event</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing Finance - Print</fullName>
                </value>
                <value>
                    <fullName>Apartment Finance Today - Digital</fullName>
                </value>
                <value>
                    <fullName>Aquatics International - Digital</fullName>
                </value>
                <value>
                    <fullName>Aquatics International - Print</fullName>
                </value>
                <value>
                    <fullName>Architect - Digital</fullName>
                </value>
                <value>
                    <fullName>Architect - Event</fullName>
                </value>
                <value>
                    <fullName>Architect - Print</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting - Digital</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting - Event</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting - Print</fullName>
                </value>
                <value>
                    <fullName>Builder - Digital</fullName>
                </value>
                <value>
                    <fullName>Builder - Event</fullName>
                </value>
                <value>
                    <fullName>Builder - Print</fullName>
                </value>
                <value>
                    <fullName>Coastal Contractor - Digital</fullName>
                </value>
                <value>
                    <fullName>Concrete Construction - Digital</fullName>
                </value>
                <value>
                    <fullName>Concrete Construction - Event</fullName>
                </value>
                <value>
                    <fullName>Concrete Construction - Print</fullName>
                </value>
                <value>
                    <fullName>Custom Home - Digital</fullName>
                </value>
                <value>
                    <fullName>Custom Home - Print</fullName>
                </value>
                <value>
                    <fullName>EcoBuilding - Digital</fullName>
                </value>
                <value>
                    <fullName>EcoBuilding  - Print</fullName>
                </value>
                <value>
                    <fullName>EcoBuilding - Event</fullName>
                </value>
                <value>
                    <fullName>Housing Finance - Digital</fullName>
                </value>
                <value>
                    <fullName>Journal of Light Construction - Digital</fullName>
                </value>
                <value>
                    <fullName>Journal of Light Construction - Print</fullName>
                </value>
                <value>
                    <fullName>Masonry Construction - Digital</fullName>
                </value>
                <value>
                    <fullName>Masonry Construction - Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account that is a traditional Headquarters Account</description>
        <inlineHelpText>Account that is a traditional Headquarters Account</inlineHelpText>
        <label>HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWAnnual_Revenue__c</fullName>
        <label>HWAnnual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under $500,000</fullName>
                </value>
                <value>
                    <fullName>$500,000 to $999,999</fullName>
                </value>
                <value>
                    <fullName>$1 Million to $4.9 Million</fullName>
                </value>
                <value>
                    <fullName>$5 Million To $10 Million</fullName>
                </value>
                <value>
                    <fullName>More than $10 Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HW_Account_DoubleClick_ID__c</fullName>
        <externalId>true</externalId>
        <label>HW Account DoubleClick ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HW_Account_ID__c</fullName>
        <label>HW Account ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HW_Company_Size__c</fullName>
        <description>Number of Employees</description>
        <inlineHelpText>Number of Employees</inlineHelpText>
        <label>HW Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2-10</fullName>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-499</fullName>
                </value>
                <value>
                    <fullName>500-2500</fullName>
                </value>
                <value>
                    <fullName>2500+</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HW_DFP_Advertiser_ID__c</fullName>
        <externalId>true</externalId>
        <label>HW DFP Advertiser ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HW_DFP_Agency_ID__c</fullName>
        <externalId>true</externalId>
        <label>HW DFP Agency ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Invoice Delivery Preference is Hard Copy</inlineHelpText>
        <label>Hard Copy Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Active_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Active Subscription?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Past_Due_Email_Notes__c</fullName>
        <label>Hold Past Due Email Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Past_Due_Emails__c</fullName>
        <label>Hold Past Due Emails</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_HW_ID__c</fullName>
        <description>SFDC ID = HW Account ID (imported from Meyers)</description>
        <formula>Id =  HW_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SFDC ID = HW Account ID (imported from Meyers)</inlineHelpText>
        <label>ID = HW ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Description__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment Owners and Managers</fullName>
                </value>
                <value>
                    <fullName>Builders and Developers</fullName>
                </value>
                <value>
                    <fullName>Building Product Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Hanley Wood</fullName>
                </value>
                <value>
                    <fullName>Industry Associates</fullName>
                </value>
                <value>
                    <fullName>Lenders and Investors</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Description__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCT</fullName>
                </value>
                <value>
                    <fullName>ADVR</fullName>
                </value>
                <value>
                    <fullName>APPL</fullName>
                </value>
                <value>
                    <fullName>APPR</fullName>
                </value>
                <value>
                    <fullName>APTM</fullName>
                </value>
                <value>
                    <fullName>APTO</fullName>
                </value>
                <value>
                    <fullName>ARCH</fullName>
                </value>
                <value>
                    <fullName>ASSOC</fullName>
                </value>
                <value>
                    <fullName>ATTY</fullName>
                </value>
                <value>
                    <fullName>BLDR</fullName>
                </value>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>BROK</fullName>
                </value>
                <value>
                    <fullName>CABI</fullName>
                </value>
                <value>
                    <fullName>CONS</fullName>
                </value>
                <value>
                    <fullName>DEVC</fullName>
                </value>
                <value>
                    <fullName>DEVL</fullName>
                </value>
                <value>
                    <fullName>DOOR</fullName>
                </value>
                <value>
                    <fullName>ELEC</fullName>
                </value>
                <value>
                    <fullName>ENGR</fullName>
                </value>
                <value>
                    <fullName>FAUC</fullName>
                </value>
                <value>
                    <fullName>FLOOR</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>INSUL</fullName>
                </value>
                <value>
                    <fullName>INSUR</fullName>
                </value>
                <value>
                    <fullName>INTD</fullName>
                </value>
                <value>
                    <fullName>INVB</fullName>
                </value>
                <value>
                    <fullName>LEND</fullName>
                </value>
                <value>
                    <fullName>LUMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Description__c</fullName>
        <label>Industry Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNTING FIRMS</fullName>
                </value>
                <value>
                    <fullName>ADVERTISING</fullName>
                </value>
                <value>
                    <fullName>APARTMENT MANAGER</fullName>
                </value>
                <value>
                    <fullName>APARTMENT OWNERS</fullName>
                </value>
                <value>
                    <fullName>APPLIANCE COMPANY</fullName>
                </value>
                <value>
                    <fullName>APPRAISER</fullName>
                </value>
                <value>
                    <fullName>ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>ATTORNEY</fullName>
                </value>
                <value>
                    <fullName>BUILDING INDUSTRY ASSOCIATION AND COUNCIL</fullName>
                </value>
                <value>
                    <fullName>CABINETS</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-RESIDENTIAL LAND</fullName>
                </value>
                <value>
                    <fullName>DOORS MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL</fullName>
                </value>
                <value>
                    <fullName>ENGINEER</fullName>
                </value>
                <value>
                    <fullName>FAUCET MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>FLOORING MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT/CITY/COUNTY</fullName>
                </value>
                <value>
                    <fullName>HANLEY WOOD</fullName>
                </value>
                <value>
                    <fullName>HEATING, VENILATION, AIR CONDITIONING</fullName>
                </value>
                <value>
                    <fullName>INSULATION</fullName>
                </value>
                <value>
                    <fullName>INSURANCE</fullName>
                </value>
                <value>
                    <fullName>INTERIOR DESIGNER</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT BANKER (EQUITY)</fullName>
                </value>
                <value>
                    <fullName>LAND BROKER</fullName>
                </value>
                <value>
                    <fullName>LAND PLANNER</fullName>
                </value>
                <value>
                    <fullName>LENDER/BANK</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>MORTGAGE COMPANY</fullName>
                </value>
                <value>
                    <fullName>OTHER BUILDING PRODUCT MANUFACTURERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoices_Sent_on_10th__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked then, Email Notifications sent on 10th of this month to all pending invoices of the account.</inlineHelpText>
        <label>Invoices Sent on 10th</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoices_Sent_on_20th__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked then, Email Notifications sent on 20th of this month to all pending invoices of the account.</inlineHelpText>
        <label>Invoices Sent on 20th</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Account can have Land Listings, relate the Account to the Land Broker object with the correct Name, Website and Logo to display in Zonda</inlineHelpText>
        <label>Land Broker</label>
        <referenceTo>Land_Broker__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Land_Listing_Data_Agreeement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if we have a signed Land Listing Data Agreement with the Client</description>
        <label>Land Listing Data Agreeement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Listing_Last_Date_Updated__c</fullName>
        <inlineHelpText>This the last date the broker provided listings to Meyers.</inlineHelpText>
        <label>Land Listing Last Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_MetroStudy_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy_Metrostudy Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MG_Merge_Complete__c</fullName>
        <formula>CASESAFEID(HW_Account_ID__c) = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MG Merge Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MR_Brand_Id__c</fullName>
        <description>Media Radar Brand ID</description>
        <inlineHelpText>Media Radar Brand ID</inlineHelpText>
        <label>MR Brand Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Customer_Type__c</fullName>
        <description>10K Marketing Customer Type (maintained via batch apex)</description>
        <inlineHelpText>Marketing Customer Type</inlineHelpText>
        <label>Marketing Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a temp field, may be deleted after 8/19</description>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Days_Open__c</fullName>
        <formula>TODAY() - Oldest_Invoice_Due_Date__c</formula>
        <label>Max Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Account_Type__c</fullName>
        <label>Media Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADVERTISER</fullName>
                    <default>true</default>
                    <label>ADVERTISER</label>
                </value>
                <value>
                    <fullName>AGENCY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Brands_Digital__c</fullName>
        <description>Brands that accounts have done Digital Media business with</description>
        <inlineHelpText>Brands that accounts have done Digital Media business with</inlineHelpText>
        <label>Media Brands - Digital</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affordable Housing Finance</fullName>
                </value>
                <value>
                    <fullName>AFT</fullName>
                </value>
                <value>
                    <fullName>AHF</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>American Dream Home</fullName>
                </value>
                <value>
                    <fullName>American Dream Homes</fullName>
                </value>
                <value>
                    <fullName>Apartment Finance Today</fullName>
                </value>
                <value>
                    <fullName>Aquatics International</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CON</fullName>
                </value>
                <value>
                    <fullName>Concrete Construction</fullName>
                </value>
                <value>
                    <fullName>Custom Home</fullName>
                </value>
                <value>
                    <fullName>Dream Home Source</fullName>
                </value>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>Eco Building</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
                <value>
                    <fullName>Homeplans</fullName>
                </value>
                <value>
                    <fullName>JLC</fullName>
                </value>
                <value>
                    <fullName>Journal of Light Construction</fullName>
                </value>
                <value>
                    <fullName>Masonry Construction</fullName>
                </value>
                <value>
                    <fullName>MetalMag</fullName>
                </value>
                <value>
                    <fullName>MFE</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Brands_Print__c</fullName>
        <description>Brands that the account has done Media Print business with.</description>
        <inlineHelpText>Brands that the account has done Media Print business with.</inlineHelpText>
        <label>Media Brands - Print</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affordable Housing Finance</fullName>
                </value>
                <value>
                    <fullName>AFT</fullName>
                </value>
                <value>
                    <fullName>AHF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>Apartment Finance Today</fullName>
                </value>
                <value>
                    <fullName>Aquatics International</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>Coastal Contractor</fullName>
                </value>
                <value>
                    <fullName>Concrete Construction</fullName>
                </value>
                <value>
                    <fullName>Custom Home</fullName>
                </value>
                <value>
                    <fullName>Dream Home Source</fullName>
                </value>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>Eco Building</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
                <value>
                    <fullName>Eplans</fullName>
                </value>
                <value>
                    <fullName>Homeplans</fullName>
                </value>
                <value>
                    <fullName>JLC</fullName>
                </value>
                <value>
                    <fullName>Journal Of Light Construction</fullName>
                </value>
                <value>
                    <fullName>Masonry Construction</fullName>
                </value>
                <value>
                    <fullName>Metal Mag</fullName>
                </value>
                <value>
                    <fullName>MFE</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>Multifamily Executive</fullName>
                </value>
                <value>
                    <fullName>PDB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Customer_Type__c</fullName>
        <description>10K Media Customer Type (maintained via batch apex)</description>
        <inlineHelpText>Media Customer Type</inlineHelpText>
        <label>Media Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Advisor__c</fullName>
        <label>Member Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dorothy Dominguez</fullName>
                </value>
                <value>
                    <fullName>Ericca Ciochetti</fullName>
                </value>
                <value>
                    <fullName>Karen Bennett</fullName>
                </value>
                <value>
                    <fullName>Lisa Timmons</fullName>
                </value>
                <value>
                    <fullName>Michelle Bennett</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Preet Pillai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Program_As_Of_Date__c</fullName>
        <description>The Date the account enters the specified Membership Program Status</description>
        <label>Membership Program As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Program_MA__c</fullName>
        <description>Member Advisor assigned to the account for all Membership Program activities</description>
        <label>Membership Program  MA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dorothy Dominguez</fullName>
                </value>
                <value>
                    <fullName>Ericca Ciochetti</fullName>
                </value>
                <value>
                    <fullName>Karen Bennett</fullName>
                </value>
                <value>
                    <fullName>Lisa Timmons</fullName>
                </value>
                <value>
                    <fullName>Michelle Bennett</fullName>
                </value>
                <value>
                    <fullName>Preet Pillai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Program_Notes__c</fullName>
        <label>Membership Program Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>